resources/css/humhub.mail.css
/* ... */
.mail .chooser .media-list li .media .media-heading {
  display: flex;
  align-items: center;
  justify-content: space-between;
}
.mail .chooser .media-list li .media .media-heading .time {
  margin-left: 8px;
  flex-shrink: 0;
}
.mail .chooser .media-list li .media .media-left,
.mail .chooser .media-list li .media .media > .pull-left {
  margin-right: 28px;
}
.mail .chooser .media-list li .media .sep {
  font-weight: 600;
  font-size: 16px;
  margin: 0 6px;
  color: #b9b9b9;
}
.mail .chooser .media-list li .media h4,
.mail .chooser .media-list li .media p {
  margin: 0;
  font-size: 14px;
  line-height: 19px;
}
.mail .chooser .media-list li .media h4 {
  font-weight: 600;
  color: #000;
}
.mail .chooser .media-list li .media p {
  font-weight: 400;
  color: #4b4b4b;
}
.mail .chooser .media-list li .media .time {
  font-weight: 600;
  font-size: 10px;
  line-height: 14px;
}
.mail .chooser .floating-new-message-btn {
  display: none;
  justify-content: center;
  align-items: center;
  position: absolute;
  bottom: 86px;
  right: 25px;
  height: 80px;
  width: 80px;
  border-radius: 50%;
  background-color: #456CA8;
}
@media screen and (max-width: 991px) {
  .mail .chooser {
    padding: 0;
    height: calc(100vh - 64px);
    overflow: hidden;
  }
  .mail .chooser.closed #inbox {
    overflow: hidden;
  }
  .mail .chooser .panel {
    height: 100%;
    margin-bottom: 0;
    overflow: hidden;
  }
  .mail .chooser .panel > .media-list {
    max-height: 100%;
    overflow: auto;
  }
  .mail .chooser .panel > .media-list > li:last-child {
    margin-bottom: 54px;
  }
  .mail .chooser .panel-heading {
    display: none;
  }
  .mail .chooser .floating-new-message-btn {
    display: inline-flex;
  }
}
.mail .messages .panel-heading {
  font-weight: 600;
  font-size: 16px;
  line-height: 22px;
  padding: 13.5px 22px;
  /* -------------------------------------------- */
  /* mail conversation header styling */
  /* -------------------------------------------- */
  /* -------------------------------------------- */
}
.mail .messages .panel-heading .nav {
  display: none;
  position: absolute;
  top: 14px;
  left: 8px;
}
.mail .messages .panel-heading .nav .dropdown .dropdown-toggle {
  font-size: 20px;
  color: #3cbeef !important;
  background-color: transparent !important;
}
.mail .messages .panel-heading .nav .dropdown-menu {
  background-color: #fff;
}
.mail .messages .panel-heading .nav .dropdown-menu li {
  border-left: 0;
}
.mail .messages .panel-heading .nav .dropdown-menu li:last-child a {
  display: flex;
  flex-direction: row-reverse;
  justify-content: space-between;
  align-items: center;
}
.mail .messages .panel-heading .conversation-title {
  margin-left: 22px;
}
.mail .messages .panel-heading .conversation-actions a {
  display: flex;
  flex-direction: row-reverse;
  align-items: center;
  color: #737373;
  padding: 0;
}
.mail .messages .panel-heading .conversation-actions a span {
  font-weight: 600;
  font-size: 14px;
  line-height: 19px;
  margin-right: 10px;
}
.mail .messages .panel-heading .close-discussion {
  display: none;
}
@media screen and (max-width: 991px) {
  .mail .messages .panel-heading .nav {
    display: block;
  }
  .mail .messages .panel-heading .conversation-actions {
    display: none;
  }
  .mail .messages .panel-heading .close-discussion {
    display: block;
  }
}
.mail .messages .panel-body {
  padding: 0 22px 18px;
}
.mail .messages .conversation-entry-list {
  max-height: 408px;
}
.mail .messages .media-list li {
  padding: 0;
  border: none;
}
.mail .messages .media-list .mail-conversation-entry:last-of-type {
  margin-bottom: 15px;
}
.mail .messages .media-list .date-divider {
  display: contents;
}
.mail .messages .media-list .date-divider hr {
  margin: 35px 0 -20px;
  color: #d4d4d4;
}
.mail .messages .media-list .date-divider small {
  display: inline-block;
  position: sticky;
  top: 0;
  left: calc(50% - 200px / 2);
  width: 200px;
  text-align: center;
  padding: 12px 0;
  border-radius: 24px;
  border: 1px solid #d4d4d4;
  background-color: #fff;
  z-index: 1;
}
.mail .messages .media-list .media > .media {
  position: relative;
  overflow: visible;
}
.mail .messages .media-list .user-image {
  margin-top: 21px;
  margin-right: 18px;
}
.mail .messages .media-list .media.me .media-body .content {
  margin-right: 32px;
  background-color: #456CA8;
}
.mail .messages .media-list .media.me .media-body .content p {
  color: #fff;
}
.mail .messages .media-list .media.me .media-body .content .time {
  color: #9edff7;
}
.mail .messages .media-list .media.other .media-body .content {
  background-color: #f2f2f2;
}
.mail .messages .media-list .media.other .media-body .content p {
  color: #4b4b4b;
}
.mail .messages .media-list .media.other .media-body .content .time {
  color: #828282;
}
.mail .messages .media-list .nav-pills.preferences .dropdown .dropdown-toggle {
  padding: 2px 6px;
}
.mail .messages .media-list .media-body {
  width: auto;
  padding-left: 0;
}
.mail .messages .media-list .media-body .media-heading {
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  color: #828282;
}
.mail .messages .media-list .media-body .content {
  display: block;
  max-width: 500px;
  padding: 14px 24px;
  border-radius: 13px;
}
.mail .messages .media-list .media-body .content a {
  color: inherit;
  text-decoration: underline;
}
.mail .messages .media-list .media-body .content .time-container {
  display: inline-block;
  text-align: right;
  width: 100%;
  margin-top: 10px;
}
.mail .messages .media-list .media-body .content .time {
  font-weight: 600;
  font-size: 10px;
  line-height: 14px;
}
.mail .messages .mail-message-form {
  padding-top: 50px;
  margin-right: -22px;
}
.mail .messages .mail-message-form form {
  display: flex;
  align-items: center;
}
/* ... */

